# parity-plot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-07-19-designer-phase-1-skeleton.md  2026-07-20-data-sources-phase-1.md  2026-07-20-designer-brush-selection.md  2026-07-20-designer-phase-2-explorer.md  2026-07-20-designer-phase-3-triage.md  2026-07-20-tolerances-phase-1-model.md  2026-07-20-tolerances-phase-2-rendering.md  (+3 more)
parity_plot/: __init__.py  cli.py  config.py  data.py  encoding.py  examples.py  plot.py  sources.py  stats.py  themes.py  tol_spec.py  tolerance.py  tolerances.py
parity_plot/designer/: __init__.py  app.py  datasets.py  filebrowser.py  filters.py  inspector_helpers.py  launch.py  records.py  selection.py  serialize.py  session.py  state.py  table_rows.py  tolerance_ops.py
tests/: conftest.py  test_cli.py  test_config.py  test_config_tolerances.py  test_data.py  test_data_config.py  test_data_load.py  test_encoding.py  test_encoding_config.py  test_examples.py  test_parity_entry.py  test_plot.py  test_sources.py  test_stats.py  test_theme_colors.py  test_tol_spec.py  test_tolerance.py  test_tolerances.py
tests/designer/: test_app.py  test_brush_integration.py  test_brush_wiring.py  test_controls.py  test_data_panel.py  test_datasets.py  test_filebrowser.py  test_filters.py  test_golden_wysiwyg.py  test_inspector.py  test_launch.py  test_phase2_integration.py  test_phase3_datasources.py  test_phase3_integration.py  test_records.py  test_selection_link.py  test_selection_parse.py  test_serialize.py  test_session.py  test_state.py  test_state_data.py  test_state_filters.py  test_table_panel.py  test_table_rows.py  test_tolerance_ops.py  test_tolerance_panel_flow.py
(+7 files in other folders)
