[project]
name = "parity-plot"
version = "0.1.0"
description = "45-degree parity plots from Plotly, as a Python package and a CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kaleido>=1.3.0",
    "plotly>=6.0",
    "rich-click>=1.8",
]

[project.optional-dependencies]
static = ["kaleido>=0.2.1"]
designer = [
    "nicegui>=3.14",
    "tomlkit>=0.13",
]

[project.scripts]
parity-plot = "parity_plot.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["parity_plot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# NiceGUI's headless `user` fixture is async; without a runner pytest reports it
# as "requested an async fixture with no plugin that handled it".
asyncio_mode = "auto"
markers = ["module_under_test: which module's ui.page routes the user fixture serves"]
